# 2025_td3_511_leith_edgar

./: .gitignore
.github/workflows/: reject-prs-to-main.yml
3_trabajos_practicos/tp1/firmware/: CMakeLists.txt  firmware.c
3_trabajos_practicos/tp2/firmware/: CMakeLists.txt  firmware.c
3_trabajos_practicos/tp3/: README.md
3_trabajos_practicos/tp3/firmware/: CMakeLists.txt  firmware.c
3_trabajos_practicos/tp3/helper/: CMakeLists.txt  README.md
3_trabajos_practicos/tp3/helper/include/: helper.h
3_trabajos_practicos/tp3/helper/src/: helper.c
3_trabajos_practicos/tp3/lcd/: CMakeLists.txt  README.md
3_trabajos_practicos/tp3/lcd/examples/hello_world/: main.c
3_trabajos_practicos/tp3/lcd/examples/sprintf/: main.c
3_trabajos_practicos/tp3/lcd/include/: lcd.h
3_trabajos_practicos/tp4/: README.md
3_trabajos_practicos/tp4/bmp280/: CMakelists.txt  README.md
3_trabajos_practicos/tp4/bmp280/include/: bmp280.h
3_trabajos_practicos/tp4/bmp280/src/: bmp280.c
3_trabajos_practicos/tp4/lcd/src/: lcd.c
5_docs/git/: README.md
5_docs/info_catedra/: README.md
5_docs/unidades_tematicas/1_rtos/apuntes/: README.md
